api documentation for start and end service
