# backend/docs/swagger.json
@@ -279,6 +279,37 @@
                 }
             }
         },
+        "/endService": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Finish a service",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "booking id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/rescheduleBooking": {
             "post": {
                 "produces": [
@@ -294,6 +325,44 @@
                         "schema": {
                             "$ref": "#/definitions/structTypes.BookingRescheduleRequest"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/startService": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Start a service",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "booking id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "otp",
+                        "name": "otp",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -587,6 +656,9 @@
         "structTypes.Cust": {
             "type": "object",
             "properties": {
+                "auth_token": {
+                    "type": "string"
+                },
                 "city_id": {
                     "type": "integer"
                 },
@@ -655,6 +727,9 @@
         "structTypes.Vendor": {
             "type": "object",
             "properties": {
+                "auth_token": {
+                    "type": "string"
+                },
                 "city_name": {
                     "type": "string"
                 },
